care-australia-uat/force-app/main/default/objects/ApexDebugLog__c/ApexDebugLog__c.object-meta.xml
<CustomObject>
    <label>Apex Debug Log</label>
    <nameField>
        <displayFormat>ADL{000000000}</displayFormat>
        <label>Apex Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>