care-australia-uat/force-app/main/default/objects/ApexDebugLog__c/fields/RecordIdData__c.field-meta.xml
<CustomField>
    <fullName>RecordIdData__c</fullName>
    <label>Record Id / Data</label>
    <type>TextArea</type>
</CustomField>