care-australia-uat/force-app/main/default/objects/ApexDebugLog__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; RecordIdData__c,&apos;Link&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>