care-australia-uat/force-app/main/default/objects/ApexDebugLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>Stack Trace</label>
    <type>TextArea</type>
</CustomField>