care-australia-uat/force-app/main/default/objects/ApexDebugLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>ApexClass__c</columns>
    <columns>Method__c</columns>
    <columns>Message__c</columns>
    <columns>StackTrace__c</columns>
    <columns>RecordLink__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>